
2012-07-22  Cedric Bail

	* Don't crash when calling evas_object_smart_type_check without type.

2012-07-24  Ingvaldur Sigurjonsson

	* Fix typoe in docs

2012-07-24  Hermet (ChunEon Park)

	* Fixed evas_gl resource list have cleared properly when it is released
  	so it would be no problem when it is reinitialized in one same process.

2012-07-24  Cedric Bail

	* Handle Proxy with the right context.

2012-07-24  Carsten Haitzler (The Rasterman)

        * Fix long-standing bug when changing layer of a smart object,
        its children dont change their layer value and pointer with it, thus
        getting layer from them get you the wrong one.

2012-07-26  Cedric Bail

	* Keep track of inactive proxied object change so we always update the proxy correctly.

2012-08-01  Jiyoun Park(jypark)

        * Fix gif load bug. we initialize first frame buffer of gif loader

2012-08-01  Jiyoun Park(jypark)

        * Fix evas pointer count problem, if press/release events occurs not pair,
	it screws up the evas event process. We are not deal with release event if
	there is no pressed pointer.

2012-08-01  Carsten Haitzler (The Rasterman)

        * Provide share (Data) file for prefix finding and use
        eina_prefix for modules too so we work with debian multiarch


2012-08-02  Sung W. Park (sung_)

        * Fix evas_gl's internal resource surface bug. For optimzation evas_gl
        was using evas' window surface to do its resource creation and it 
        wans't properly updated when a window is destroyed and recreated.

2012-08-07  Cedric Bail

	* Properly warn when user try to link object from different canvas.

2012-08-13  Carsten Haitzler (The Rasterman)

	* Fix async fd stuff to generate new pipe after a fork (pid mismatch)

2012-08-14  Tom Hacohen (TAsn)

	* Textblock: Fixed range geometry when the last item is a format.

2012-08-17  Hermet (ChunEon Park)

	* Let clip the mapped obj even if it is a child of the mapped obj and do
  	it only when clipper exists